Fix buttons covering header divider

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ html, body{
 
 body {
     background-color: #0A192F;
-    padding-top: 60px;
+    padding-top: 65px;
     padding-bottom: 60px;
 }
 /*#endregion Specific Types*/
